@@ -2,6 +2,8 @@
 
 //Alpha 45
 
+Added eight additional flags to Combo Attributes (the new total is 16)
+	and renamed them from 'Misc Flah 0x00' format to 'Flag 1' to 'Flag 16'.
 Added eweapon script toggleBossFireball.
 Added The ability to set a specific damage amount on damage
 	combos in Combo Attributes[0].
